Bugfix  sprint 8  batch 1 (#23)
* NCIPPE-324

* NCIPPE-353

* NCIPPE-265

* NCIPPE-295

* NCIPPE-267
adjust dividers across the site
adjust main accent graphic and bottom padding across site

* NCIPPE-266

* NCIPPE-268

* NCIPPE-296

* NCIPPE-332

* NCIPPE-264

* ncippe-368

* fix default variable setting

* ncippe-324

* ncippe-274 - fix page render on load

* ensure general click events have data attributes

* ncippe-295 - fix ie issues

* ncippe-274 fix tab bar

* ncippe-350 overlapping text

* ncippe-324 title breaking out of container in IE

--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ sup {
 
 ul.bulletList, ul.bulletList ul {
   margin-left: 20px;
-  list-style-type: disc;
+  list-style-type: '•';
 }
 ul.bulletList--spreadOut, ul.bulletList--spreadOut ul {
   margin-left: 30px;
@@ -119,7 +119,7 @@ ul.bulletList--spreadOut ul {
   margin-top: 16px;
 }
 ul.bulletList--spreadOut li {
-  padding-left: 10px;
+  padding-left: 15px;
   margin-bottom: 16px;
 }
 
@@ -297,34 +297,52 @@ ul.bulletList > li:last-child {
   }
 }
 
-.mainContainer {
+.mainContainer,
+.mainContainer--dashboard,
+.innerContainer {
   background-color: #f2f5f8;
-  background-image: url(/assets/images/soft-diamond-background-short.svg);
   background-position: bottom right;
   background-repeat: no-repeat;
-  background-size: 50%;
-  border-top: 1px solid #e0e0e0;
+  background-size: 90%;
   padding-bottom: 110px;
+}
+
+.mainContainer {
+  background-image: url(/assets/images/soft-diamond-background-short.svg);
+  border-top: 1px solid #e0e0e0;
   min-height: calc(100vh - 84px);
 }
 .mainContainer--dashboard {
-  background-color: #f2f5f8;
   background-image: url(/assets/images/soft-diamond-background-short.svg);
-  background-position: bottom right;
-  background-repeat: no-repeat;
-  background-size: 50%;
   border-top: 1px solid #e0e0e0;
-  padding-bottom: 110px;
 }
 .innerContainer {
-  background-color: #f2f5f8;
   background-image: url(/assets/images/soft-diamond-background-short.svg);
-  background-position: bottom right;
-  background-repeat: no-repeat;
-  background-size: 50%;
-  margin-top: 48px;
-  padding-top: 56px;
-  padding-bottom: 240px;
+  margin-top: 40px;
+  padding-top: 36px;
+}
+
+@media (min-width: 600px) {
+  .innerContainer {
+    margin-top: 48px;
+    padding-top: 56px;
+  }
+}
+
+@media (min-width: 600px) {
+  .mainContainer,
+  .mainContainer--dashboard,
+  .innerContainer {
+    background-size: 60%;
+  }
+}
+@media (min-width: 960px) {
+  .mainContainer,
+  .mainContainer--dashboard,
+  .innerContainer {
+    background-size: 50%;
+    padding-bottom: 240px;
+  }
 }
 .mainContainer--public {
   background-color: transparent;
@@ -332,15 +350,19 @@ ul.bulletList > li:last-child {
 }
 
 /* default body link styles */
-.mainContainer .MuiTypography-root a:not(.MuiLink-root) {
+.mainContainer .MuiTypography-root a:not(.MuiLink-root),
+#main .MuiTypography-root a:not(.MuiLink-root) {
   color: #1e6fd6;
-  font-size: 16px;
   font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-weight: 600;
-  line-height: 26px;
   letter-spacing: 1px;
   text-transform: none;
   text-decoration: none;
+}
+
+.mainContainer .MuiTypography-root a:not(.MuiLink-root):hover,
+#main .MuiTypography-root a:not(.MuiLink-root):hover {
+  text-decoration: underline;
 }
 
 .popup .mainContainer {
@@ -370,7 +392,6 @@ ul.bulletList > li:last-child {
   font-weight: 700;
   line-height: 32px;
   letter-spacing: 0;
-  paragraph-height: 20px;
 }
 
 /* Stupid IE11 hacks */
@@ -392,9 +413,9 @@ ul.bulletList > li:last-child {
     background-size: 541px 349px;
   }
 
-  .mainContainer--dashboard {
+  /* .mainContainer--dashboard {
 
-  }
+  } */
 
   /* Home Page accent image */
   .accentImage {
@@ -410,15 +431,8 @@ ul.bulletList > li:last-child {
   }
 
   /* What to Expect tab nav */
-  #tabBar a::after, #tabBar a::before {
-    display: none;
-  }
-  #tabBar a {
-    padding: 6px 12px;
-    border: none;
-  }
-  #tabBar a.Mui-selected {
-    background-color: #fff;
+  #tabBar a::before {
+    top: 4px;
   }
 
   /* Icon Cards */
